--- a/components/step1-basic-info.html
+++ b/components/step1-basic-info.html
@@ -3,7 +3,7 @@
     <div class="card">
         <div class="card__body">
             <h2>Basic Information</h2>
-            <p>Let's start with some basic information about you.</p>
+            <p>Let's start with some basic information about you and your newsletter.</p>
             
             <div class="form-group">
                 <label class="form-label" for="firstName">First Name *</label>
@@ -18,6 +18,12 @@
             <div class="form-group">
                 <label class="form-label" for="email">Email Address *</label>
                 <input type="email" id="email" class="form-control" required>
+            </div>
+            
+            <div class="form-group">
+                <label class="form-label" for="newsletterName">Newsletter Name *</label>
+                <input type="text" id="newsletterName" class="form-control" required placeholder="e.g., The Growth Report, Tech Weekly">
+                <small class="form-text">What's the name of your newsletter?</small>
             </div>
             
             <div class="form-actions">
