--- a/components/step3-social-team.html
+++ b/components/step3-social-team.html
@@ -22,13 +22,13 @@
                 <label class="form-label" for="totalSocialFollowing">Total Social Following</label>
                 <div class="slider-container">
                     <input type="range" id="totalSocialFollowing" class="form-slider" 
-                           min="0" max="1000000" value="0" step="1000" 
+                           min="0" max="100000000" value="0" step="100000" 
                            oninput="updateFollowingDisplay(this.value)">
                     <div class="slider-labels">
                         <span>0</span>
-                        <span>100K</span>
-                        <span>500K</span>
-                        <span>1M+</span>
+                        <span>25M</span>
+                        <span>50M</span>
+                        <span>100M+</span>
                     </div>
                     <div class="slider-value" id="followingValue">0 followers</div>
                 </div>
