Add additional newsletter platforms to dropdown - Added Active Campaign, Campaign Monitor, Sailthru, and Constant Contact - Platforms are listed in logical order with beehiiv first - Other option remains at the end for unlisted platforms

--- a/components/step2-newsletter-platform.html
+++ b/components/step2-newsletter-platform.html
@@ -13,6 +13,10 @@
                     <option value="Substack">Substack</option>
                     <option value="Mailchimp">Mailchimp</option>
                     <option value="ConvertKit">ConvertKit</option>
+                    <option value="Active Campaign">Active Campaign</option>
+                    <option value="Campaign Monitor">Campaign Monitor</option>
+                    <option value="Sailthru">Sailthru</option>
+                    <option value="Constant Contact">Constant Contact</option>
                     <option value="Other">Other</option>
                 </select>
             </div>
