--- a/components/step2-newsletter-platform.html
+++ b/components/step2-newsletter-platform.html
@@ -11,24 +11,27 @@
                     <option value="">Select your platform</option>
                     <option value="Active Campaign">Active Campaign</option>
                     <option value="Amazon Simple Email Service">Amazon SES</option>
+                    <option value="AWeber">AWeber</option>
                     <option value="beehiiv">beehiiv</option>
+                    <option value="Brevo">Sendinblue</option>
                     <option value="Campaign Monitor">Campaign Monitor</option>
                     <option value="ConvertKit">ConvertKit</option>
                     <option value="Constant Contact">Constant Contact</option>
-                    <option value="Substack">Substack</option>
-                    <option value="Mailchimp">Mailchimp</option>
-                    
-                    <option value="Sailthru">Sailthru</option>
+                    <option value="Customer.io">Customer.io</option>
+                    <option value="Drip">Drip</option>
+                    <option value="GetResponse">GetResponse</option>
                     <option value="Hubspot">Hubspot</option>
                     <option value="Iterable">Iterable</option>
                     <option value="Klaviyo">Klaviyo</option>
-                    <option value="Salesforce Marketing Cloud">Salesforce Marketing Cloud</option>
-                    
-                    <option value="Drip">Drip</option>
-                    <option value="Sendinblue">Sendinblue</option>
+                    <option value="MailerLite">MailerLite</option>
+                    <option value="Mailchimp">Mailchimp</option>
                     <option value="Mailjet">Mailjet</option>
                     <option value="SendGrid">SendGrid</option>
-                    
+                    <option value="Substack">Substack</option>
+                    <option value="Sailthru">Sailthru</option>
+                    <option value="Salesforce Marketing Cloud">Salesforce Marketing Cloud</option>
+                    <option value="Squarespace">Squarespace</option>
+                    <option value="WordPress">WordPress</option>
                     <option value="Other">Other</option>
                 </select>
             </div>
